--- a/index.html
+++ b/index.html
@@ -1,32 +1,136 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NEXTGEN FOOT</title>
+    <title>NEXTGEN LEAGUE</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <div class="header_top">
+
             <div class="header_top-left">
+                <button class="header_button green-button">T'élecharger l'application</button>
 
             </div>
 
             <div class="header_top-right">
-                <button></button>
-                <button></button>
+                <button class="header_button white-button">Crée un compte</button>
+                <button class="header_button green-button">Connexion</button>
             </div>
+
         </div>
         <div class="header_bottom">
-
+            <img src="./Elements/logo/LOGO_Noir_FOND_TRANSPARENT.png" alt="" class="logo">
+            <nav class="header_bottom-right">
+                <a href="" class="header_link">Communauté</a>
+                <a href="pages/produit.html" class="header_link">Abonnements</a>
+                <a href="./pages/contact.html" class="header_link">Nous contacter</a>
+            </nav>
         </div>
     </header>
     <main>
+        <section class="hero">
+            <div class="hero_info">
+                <h1>La PLATEFORME DE DÉTECTION ET DE COACHING POUR FOOTBALLEURS AMATEURS</h1>
+                <div class="hero_bouttons">
+                    <button>Nous Contacter</button>
+                    <button>Voir les abonnements</button>
+                </div>
+            </div>
+        </section>
+        <section class="apropos">
+            <div class="ligne"></div>
+            <div class="apropos-bloc">
+                <h2>Qui sommes nous ?</h2>
+                <p>NextGen League vise à révolutionner l'accès des footballeurs amateurs à des opportunités de
+                    développement professionnel en leur offrant des outils technologiques avancés pour améliorer leurs
+                    performances, se connecter avec des recruteurs, et progresser dans leur carrière.</p>
+            </div>
+        </section>
 
+        <section class="fonctionalite">
+            <a href="">     <h2>Fonctionalités</h2></a>
+       
+            <div class="fontcion_bloc">
+                <div class="fontcion_card">
+                    <img src="./Elements/Images/Reseautage_NextGenLeague.png" alt="">
+                    <p>Réseautage</p>
+                </div>
+                <div class="fontcion_card">
+                    <img src="./Elements/Images/Commnauté_NextGenLeague.webp" alt="">
+                    <p>Communauté</p>
+                </div>
+                <div class="fontcion_card">
+                    <img src="./Elements/Images/Profil_Personalisé.png" alt="">
+                    <p>Profil Personalisé </p>
+                </div>
+                <div class="fontcion_card">
+                    <img src="./Elements/Images/AnalysePerformance_NextGenLeague.png" alt="">
+                    <p>Données IA</p>
+                </div>
+
+            </div>
+        </section>
+
+        <section class="stats">
+            <div class="statsbloc">
+                <div class="stat_title">
+                    <h3>2M</h3>
+                    <img src="./Elements/icone/stats.png" alt="">
+                </div>
+                <p>De profils de joueurs sur l'application</p>
+            </div>
+            <div class="statsbloc">
+                <div class="stat_title">
+                    <h3>100M</h3>
+                    <img src="./Elements/icone/stats.png" alt="">
+                </div>
+                <p>De vues sur les réseaux par mois</p>
+            </div>
+        </section>
     </main>
     <footer>
+        <div class="footer_top">
+            <nav><a href="">Mobile App</a>
+                <a href="">Community</a>
+                <a href="">Company</a>
+            </nav>
+            <a href="./index.html"><img src="./Elements/logo/LOGO_Noir_FOND_TRANSPARENT.png" alt=""></a>
+            <nav>
+                <a href="">Helps Desk</a>
+                <a href="">Blog</a>
+                <a href="">Resources</a>
+            </nav>
+        </div>
+        <div class="footer_bottom">
+            <nav>
+                <a href=""><img class="icon_footer"  src="./Elements/icone/Appstore.png" alt="Applestore"></a>
+                <a href=""><img class="icon_footer"  src="./Elements/icone/Googleplay.png" alt="Googleplay"></a>
+            </nav>
+            <nav class="social_icon">
+                <a href="">
+                    <img class="icon_footer" src="./Elements/icone/tiktok-blanc.svg" alt="Tiktok"></a>
+                <a href="">
+                    <img class="icon_footer" src="./Elements/icone/youtube-blanc.svg" alt="Youtube"></a>
+                <a href="">
+                    <img class="icon_footer" src="./Elements/icone/Intagram logo blanc.svg" alt="Instagram"></a>
+                <a href="">
+                    <img class="icon_footer" src="./Elements/icone/x-twitter Blanc.svg" alt="X"></a>
+            </nav>
+            <div  class="icon_footer-right " >
+                <a href="">
+                    <img class="icon_footer " src="./Elements/icone/apple_pay.png" alt="Apple Pay"></a>
+                <a href="">
+                    <img class="icon_footer" src="./Elements/icone/paypal.png" alt="Paypal"></a>
+            </div>
+        </div>
 
     </footer>
-    
+
 </body>
+
 </html>
