--- a/pages/produit.html
+++ b/pages/produit.html
@@ -71,17 +71,17 @@
         <div class="abonnement_txt">
             <h2>⚽️  1. Début de Match</h2>
             <p>Commence ton aventure avec NextGenLeague.  Avec l’abonnement Basique, tu accèdes gratuitement à ton premier test physique analysé par notre intelligence artificielle. Crée ton profil joueur en quelques clics, ajoute tes premières statistiques, et commence à te construire une présence en ligne. C’est l’idéal pour faire tes premiers pas vers une carrière ambitieuse dans le foot.</p>
-            <button>S’abonner</button>
+            <button class="main-button">S’abonner</button>
         </div>
-        <img src="" alt="">
+        <img src="/Elements/Images/Abonnement1.png" alt="">
     </section>
     <div class="separation-bleu"></div>
     <section class="abonnement_1">
-        <img src="" alt="">
+        <img src="/Elements/Images/Abonnement2.png" alt="">
         <div class="abonnement_txt">
             <h2>🏃 2. “Montée en Puissance”</h2>
             <p>Va plus loin dans ta progression personnelle.  L’abonnement Avancé t’ouvre les portes d’un accompagnement plus poussé : coaching personnalisé en ligne avec des experts, analyses détaillées de tes performances, et accès à des tutoriels exclusifs. Conçu pour ceux qui veulent progresser sérieusement et se donner toutes les chances d’être remarqués.</p>
-            <button>S’abonner</button>
+            <button class="main-button">S’abonner</button>
         </div>
      
     </section>
@@ -89,10 +89,10 @@
     <section class="abonnement_1">
         <div class="abonnement_txt">
             <h2>⭐ 3. “Vision Pro”</h2>
-            <p>La visibilité qu’il te faut pour atteindre les sommets.  L’abonnement Premium est fait pour les joueurs les plus ambitieux. Ton profil est mis en avant auprès des recruteurs, tu bénéficies d’un suivi complet par nos coachs, et tu es prioritaire sur les événements de détection organisés par NextGenLeague. Le combo ultime pour transformer ton potentiel en opportunités concrètes.</p>
-            <button>S’abonner</button>
+            <p>La visibilité qu’il te faut pour atteindre les sommets. L’abonnement Premium est fait pour les joueurs les plus ambitieux. Ton profil est mis en avant auprès des recruteurs, tu bénéficies d’un suivi complet par nos coachs, et tu es prioritaire sur les événements de détection organisés par NextGenLeague. Le combo ultime pour transformer ton potentiel en opportunités concrètes.</p>
+            <button class="main-button">S’abonner</button>
         </div>
-        <img src="" alt="">
+        <img src="/Elements/Images/Abonnement3.png" alt="">
     </section>
 </main>
     <footer>
